--- a/Tampermonkey-skin_v0.3.css
+++ b/Tampermonkey-skin_v0.3.css
@@ -1,4 +1,4 @@
-
+/*版本v0.3*/
 /*整体*/
 html{
     padding: 12px!important;
@@ -163,7 +163,7 @@ background-color: #2a2a2a;
 .scripttable .script_icon .nameNicon16 {
     padding: 0!important; 
 }
-
+/*版本v0.3*/
 
 
 
